--- a/examples/nextjs-example/styles/global.css
+++ b/examples/nextjs-example/styles/global.css
@@ -2,21 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-.container{
-    width: 100%;
-    height: 100%;
-    padding: 0 10%;
+.container {
+  max-width: 100% !important;
+  width: 100%;
+  height: 100%;
+  padding: 0 10%;
 }
-.title{
-    font-size: 24;
-    text-align: center;
+.title {
+  font-size: 24;
+  text-align: center;
 }
-.input{
-    display: flex;   
+.input {
+  display: flex;
 }
-.input-label{
-    width: 200px;
+.input-label {
+  width: 200px;
 }
-.input-field{
-    width: 100%;
+.input-field {
+  width: 100%;
+}
+.navigator {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
 }
