MET-162 - update example

--- a/examples/nextjs-example/styles/global.css
+++ b/examples/nextjs-example/styles/global.css
@@ -20,6 +20,12 @@
 }
 .input-field {
   width: 100%;
+  position: relative;
+}
+.input-tag{
+  position: absolute;
+  right: -100px;
+  z-index: 9999;
 }
 .navigator {
   display: flex;
